feat: Add new post notification for categories